<resources>
    <string name="app_name">M-ath</string>


    <!-- Pantalla autenticación -->
    <string name="welcome_text">M-ath</string>
    <string name="auth_intro_text">Aprende rápido</string>
    <string name="auth_intro_text_2">Enseña fácil</string>
    <string name="auth_intro_error">Es necesaria conexión a internet para realizar la primera autenticación en la aplicación</string>

    <!-- Pantalla inicial de primera vez -->
    <string name="initial_no_config">No</string>
    <string name="initial_basic_config">Sí</string>
    <string name="initial_text">Veo que es la primera vez que ejecutas la aplicación.\n ¿Deseas que se configuren algunos cursos iniciales para que puedas realizar alguna prueba inicial?</string>

    <!-- Pantalla principal -->
    <string name="main_menu_home">Inicio</string>
    <string name="main_menu_student">Pupitre</string>
    <string name="main_menu_teacher">Pizarra</string>
    <string name="main_menu_store">Estantería</string>
    <string name="main_menu_stats">Notas</string>
    <string name="main_menu_profile">Perfil</string>

    <!-- Acciones del menú -->
    <string name="overflow_actions_logout">Salir</string>
    <string name="overflow_actions_about">Acerca de</string>
    <string name="overflow_actions_settings">Configuración</string>

    <!-- Tarjeta de curso -->
    <string name="course_card_level">Nivel: </string>
    <string name="course_not_enough_data">Curso no definido</string>
    <string name="course_not_enough_data_desc">No se ha realizado ningún curso aún</string>
    <string name="course_intro">Último curso realizado: </string>

    <!-- Actividad de Curso -->
    <string name="course_lesson_start_message">Esta lección tiene %1$d preguntas, ¿está listo para comenzar?</string>
    <string name="course_lesson_no_task_message">Esta lección no tiene tareas actualmente que realizar.</string>
    <string name="course_delete">¿Está seguro que desea eliminar este curso y todo su progreso?</string>

    <!-- Actividad de Lección -->
    <string name="lesson_close_message">¿Está seguro que desea salir de esta lección y perder el progreso actual?</string>
    <string name="lesson_next_message">Siguiente</string>
    <string name="lesson_confirm_message">Confirmar</string>
    <string name="lesson_empty">Esta lección está vacía</string>
    <string name="lesson_correct_answer">¡Felicidades, has acertado!</string>
    <string name="lesson_incorrect_answer">Lo siento, no era la respuesta correcta</string>
    <string name="lesson_result_excelent">¡Excelente, has conseguido un %1$d%% de aciertos!</string>
    <string name="lesson_result_good">¡Muy bien, has aprobado con un %1$d%% de aciertos!</string>
    <string name="lesson_result_regular">Has conseguido un %1$d%% de aciertos, la práctica hace al maestro</string>
    <string name="lesson_result_bad">Conseguise un %1$d%% de aciertos, prueba a intentarlo de nuevo</string>
    <string name="lesson_result_horrible">Tienes un %1$d%% de aciertos, yo sé que puedes hacerlo mejor</string>
    <string name="lesson_select_one_option">Debes seleccionar una opción</string>

    <!-- Actividad de nuevo curso -->
    <string name="new_course_title">Crear Curso</string>

    <!-- Actividad de editar curso -->
    <string name="edit_course_lessons_title">Administrar lecciones de %1$s</string>
    <string name="edit_course_title">Editar curso %1$s</string>
    <string name="edit_course_lessons_list">Lista de lecciones</string>
    <string name="edit_course_upload">¿Desea subir el curso a internet?</string>
    <string name="edit_course_upload_yet">Este curso ya está subido en internet, ¿desea actualizarlo?</string>
    <string name="edit_course_upload_correct">El curso se ha subido correctamente</string>


    <!-- Actividad de crear lección -->
    <string name="new_lesson_title">Nueva lección</string>

    <!-- Lista de tareas -->
    <string name="math_task_list">Lista de tareas</string>

    <!-- Editar lección -->
    <string name="edit_lesson_title">Editar lección %1$s</string>
    <string name="edit_lesson_mathtask_list">Lista de Tareas</string>
    <string name="edit_lesson_mathtask_list_title">Tareas de %1$s</string>

    <!-- Nueva Tarea -->
    <string name="new_mathtask_title">Nueva tarea</string>
    <string name="new_mathtaskoption_title">Insertar nueva opción</string>
    <string name="new_mathtaskoption_list">Seleccionar opciones</string>
    <string name="new_mathtaskoption_select_at_least_one_correct">Por favor, selecciona al menos una opción correcta</string>
    <string name="new_mathtask_equation">Ecuación</string>
    <string name="new_mathtask_info_options">Selecciona si la respuesta es una fórmula o no. Esto se utiliza para evitar fallos en el formato a la hora de la representación.</string>
    <string name="new_mathtask_title_error">Por favor, introduzca la información del enunciado</string>
    <string name="new_mathtask_options_error">Por favor, introduzca por lo menos una opción</string>

    <!-- Shop Fragment -->
    <string name="shop_fragment_download_new">¿Desea descargar el curso?</string>
    <string name="shop_fragment_download_update">Este curso ya está descargado, ¿desea actualizarlo (se borrará el progreso actual)?</string>
    <string name="shop_fragment_downloaded_course">Curso descargado correctamente</string>
    <string name="shop_fragment_view_curse">Ver curso descargado</string>
    <string name="shop_fragment_no_connection">No hay conexión con el servidor</string>

    <!-- Stats Activity -->
    <string name="stats_users">Usuarios realizando en curso: %1$s</string>
    <string name="stats_results_info">Porcentaje de aciertos según la lección</string>

    <!-- Profile fragment -->
    <string name="profile_total_courses">Tienes registrados %1$d cursos</string>
    <string name="profile_total_score">Tienes una puntuación total del %1$d%% </string>

    <!-- Miscelanea -->
    <string name="misc_courses">Cursos</string>
    <string name="misc_public">Público</string>
    <string name="misc_private">Privado</string>
    <string name="misc_title">Título</string>
    <string name="misc_lessons">Lecciones</string>
    <string name="misc_lesson">Lección</string>
    <string name="misc_description">Descripción</string>
    <string name="misc_statement">Enunciado</string>
    <string name="misc_autor">Autor</string>
    <string name="misc_level">Nivel</string>
    <string name="misc_visibility">Visibilidad</string>
    <string name="misc_yes">Sí</string>
    <string name="misc_no">No</string>
    <string name="misc_save">Guardar</string>
    <string name="misc_duration">Duración</string>
    <string name="misc_delete">Eliminar</string>
    <string name="misc_correct">Correcto</string>
    <string name="misc_ecuation">Ecuación</string>
    <string name="misc_solution">Resultado</string>
    <string name="misc_accept">Aceptar</string>
    <string name="misc_add">Añadir</string>
    <string name="misc_back">Volver</string>
    <string name="misc_options">Opciones</string>
    <string name="misc_edit">Editar</string>
    <string name="misc_preview">Previsualización</string>
    <string name="misc_is_ecuation">¿Es una fórmula?</string>
    <string name="misc_ok">Ok</string>
    <string name="misc_upload">Subir</string>
    <string name="misc_last_week">Última semana</string>
    <string name="misc_last_month">Último mes</string>
    <string name="misc_last_year">Último año</string>
    <string name="misc_scores">Puntuación</string>

    <string name="misc_comp_options">%1$d opciones</string>
    <string name="misc_comp_lessons">%1$d lecciones</string>

    <string name="course_type_maths">Matemáticas</string>
    <string name="course_type_science">Ciencias</string>
    <string name="course_type_technology">Tecnología</string>
    <string name="course_type_engineering">Ingeniería</string>
    <string name="course_type_others">Otros</string>


    <string name="misc_not_implemented_yet">Esta funcionalidad no está implementada en estos momentos</string>
    <!-- Peticiones -->
    <string name="request_insert_data">Por favor, introduzca todos los datos solicitados</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home_intro_explained_steps">
        - En construcción - \n\n
        * Es posible que sea necesario desinstalar la aplicación o borrar los datos que esta tiene para poder comprobar todas las nuevas funcionalidades * \n\n
        Datos iniciales:\n
        -Curso: Elemento principal que contiene todos los elementos para aprender sobre un concepto. \n
        -Lección: Cada una de las categorías en las que se compone un curso.\n
        -Tarea: Pregunta de cada una de las lecciones, contiene una descripción, la posibilidad de incluír una ecuación (insertada en modo latex por ahora) y una lista de opciones (que también soportan formato latex de ecuaciones).
\n\n
        Funcionalidades actuales:\n
        -Posibilidad de crear cursos, lecciones y tareas en el apartado "Pizarra".\n
        -Una vez creados los cursos, para tareas de test, aparecen todos en el apartado "Pupitre", pudiendo observarlos desde el punto de vista del alumno y realizarlos de una manera inicial.
\n\n
        -Posibilidad de subir curso a internet o descargar alguno de los cursos que estén en el apartado "estantería"\n
        -El apartado home contenerá un resumen, y el apartado "Perfil" los progresos del usuario actual.\n\n
        Versión 0.4 alpha
    </string>
    <string name="home_activity">Actividad reciente:</string>
    <string name="home_course_example">Este es un curso de ejemplo</string>

    <string name="info_equation">
        Ayuda para creación de fórmulas \n\n
        Esta aplicación utiliza el formato de fórmulas TeX, por lo que soporta cualquier tipo de fórmula redactada en este formato. \n\n
        Por razones de simplicidad, se incorpora un pequeño teclado calculadora que ofrece la posibilidad de incorporar fórmulas de una manera sencilla a partir de un teclado.\n
        En caso de desear más potencia, el cuadro de texto permite incluír la fórmula directamente en formato TeX y previsualizarla al instante. \n\n

        Lista de comandos generales: \n\n
        - Fracciones: \\frac{numerador}{denominador} \n
        - Raíces: \\sqrt[grado]{contenido} \n
        - Sumatorio: \\sum \n
        - Productorio: \\prod \n
        - Vector: \\overrightarrow{contenido} \n
        - Ángulo: \\widehat{contenido} \n
        - Variaciones signo igual: \\sim \\simeq \\approx \n
    </string>

</resources>
