<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/main_menu_home" />

    <item
        android:id="@+id/navigation_student"
        android:icon="@drawable/ic_create_black_24dp"
        android:title="@string/main_menu_student" />

    <item
        android:id="@+id/navigation_teacher"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/main_menu_teacher" />

    <item
        android:id="@+id/navigation_store"
        android:icon="@drawable/ic_local_library_black_24dp"
        android:title="@string/main_menu_store" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/main_menu_profile" />

</menu>
