<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MathTaskOptionListFragment">

    <!-- <io.github.kexanie.library.MathView
        android:id="@+id/createMathTaskOptionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:engine="MathJax"
        app:layout_constraintEnd_toStartOf="@+id/addNewOptionButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout7"
        app:text=""></io.github.kexanie.library.MathView> -->

    <katex.hourglass.in.mathlib.MathView
        android:id="@+id/createMathTaskOptionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toStartOf="@+id/addNewOptionButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isEcuation"
        app:setClickable="false"
        app:setText=""
        app:setTextColor="@color/colorPrimaryText"
        app:setTextSize="6sp">

    </katex.hourglass.in.mathlib.MathView>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/addNewOptionButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_text_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/misc_solution" />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/isEcuation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/misc_is_ecuation"
        app:layout_constraintEnd_toStartOf="@+id/infoButton"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout7"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout7" />

    <ImageButton
        android:id="@+id/infoButton"
        android:layout_width="22dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@null"
        app:srcCompat="@drawable/ic_info_outline_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/isEcuation"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout7"
        app:layout_constraintTop_toTopOf="@+id/isEcuation" />

    <Button
        android:id="@+id/addNewOptionButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/misc_add"
        app:layout_constraintBottom_toBottomOf="@+id/createMathTaskOptionText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout7" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_mathtaskoptions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_save_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addNewOptionButton"
        tools:listitem="@layout/card_mathtaskoption" />

    <Button
        android:id="@+id/btn_save_options"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/misc_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>